--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <tic-tac-toe-core.version>1.2.0</tic-tac-toe-core.version>
         <lombok.version>1.18.26</lombok.version>
+        <reactor-core.version>3.6.5</reactor-core.version>
 
         <commons-lang3.version>3.14.0</commons-lang3.version>
         <assertj-core.version>3.24.2</assertj-core.version>
@@ -56,6 +57,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>${reactor-core.version}</version>
         </dependency>
 
         <dependency>
