--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=web-tic-tac-toe
+
+spring.datasource.url=jdbc:postgresql://localhost:6432/whattowatchdb
+spring.datasource.username=what-to-watch-local
+spring.datasource.password=what-to-watch-local
+spring.datasource.driver-class-name=org.postgresql.Driver
