WTTT-11 // Hid usage of library in TicTacToeRules, refactored 2 methods that returned information about the game into one, clean code, renamed few classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.username=what-to-watch-local
 spring.datasource.password=what-to-watch-local
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.liquibase.change-log=classpath:db/changelog/games/db.changelog-master.xml
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
