--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,14 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <tic-tac-toe-core.version>1.2.0</tic-tac-toe-core.version>
+
         <lombok.version>1.18.26</lombok.version>
         <reactor-core.version>3.6.5</reactor-core.version>
         <liquibase-core.version>4.27.0</liquibase-core.version>
-
+        <json.version>20240303</json.version>
+        <jjwt.version>0.12.6</jjwt.version>
         <commons-lang3.version>3.14.0</commons-lang3.version>
+
         <assertj-core.version>3.24.2</assertj-core.version>
         <junit-jupiter.version>5.9.2</junit-jupiter.version>
         <mockito-core.version>5.12.0</mockito-core.version>
@@ -76,6 +79,13 @@
         </dependency>
 
         <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jjwt.version}</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
             <version>${liquibase-core.version}</version>
@@ -107,6 +117,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>${json.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj-core.version}</version>
@@ -126,8 +142,6 @@
             <version>${mockito-core.version}</version>
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
 
     <build>
